# ttlego-jitpatcher

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/tsc/: disable-main-menu-music.toml  skip-splash-screens.toml
src/: apply_patch.rs  init.rs  lib.rs  messaging.rs  patches.rs
