[package]
name = "ttlego-jitpatcher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
toml = "0.8.19"

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Memory",
  "Win32_System_Console",
]

[dev-dependencies]
indoc = "2.0.5"
